NetBSD Problem Report #21397
Received: (qmail 17776 invoked by uid 605); 30 Apr 2003 00:01:15 -0000
Message-Id: <200304300000.h3U00gf13472@gloom.lab>
Date: Wed, 30 Apr 2003 02:00:42 +0200 (CEST)
From: Jachym Holecek <freza@psi.cz>
Sender: gnats-bugs-owner@netbsd.org
Reply-To: freza@psi.cz
To: gnats-bugs@gnats.netbsd.org
Subject: IPAQ kernel does not compile on -current
X-Send-Pr-Version: 3.95
>Number: 21397
>Category: port-hpcarm
>Synopsis: IPAQ kernel does not compile on -current
>Confidential: no
>Severity: critical
>Priority: high
>Responsible: port-hpcarm-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Wed Apr 30 00:02:01 +0000 2003
>Closed-Date: Fri May 02 14:49:46 +0000 2003
>Last-Modified: Fri May 02 14:49:46 +0000 2003
>Originator: Jachym Holecek
>Release: NetBSD-current as of Tue Apr 29 23:24:52 CEST 2003
>Organization:
Photon Systems Instruments
>Environment:
System: NetBSD gloom 1.6 NetBSD 1.6 (GLOOM) #4: Mon Jan 27 14:40:31 CET 2003 jh@gloom:/usr/src/sys/arch/i386/compile/GLOOM i386
Architecture: i386
Machine: i386
>Description:
Cross compiling (./build.sh -a arm -m hpcarm -T /data/current/tools/\
obj.hpcarm/tools.NetBSD-1.6-i386 kernel=IPAQ, tools are up to date) for
hpcarm on i386, I get the following:
[... snip ...]
/data/current/tools/obj.hpcarm/tools.NetBSD-1.6-i386/bin/arm--netbsdelf-gcc -ffreestanding -O2 -Wcomment -Werror -Wall -Wno-main -Wno-format-zero-length -Wpointer-arith -Wmissing-prototypes -Wstrict-prototypes -Wno-sign-compare -Wno-uninitialized -Dhpcarm -Darm32 -I. -I/data/current/sys/arch -I/data/current/sys -nostdinc -DSAEGPIO_BASE="0x49000000" -DLKM -DDIAGNOSTIC -DCONSPEED="0x4b00" -DMAXUSERS=32 -D_KERNEL -D_KERNEL_OPT -c /data/current/sys/arch/hpcarm/hpcarm/hpc_machdep.c
/data/current/sys/arch/hpcarm/hpcarm/hpc_machdep.c: In function `initarm':
/data/current/sys/arch/hpcarm/hpcarm/hpc_machdep.c:589: `PTE_PAGETABLE' undeclared (first use in this function)
/data/current/sys/arch/hpcarm/hpcarm/hpc_machdep.c:589: (Each undeclared identifier is reported only once
/data/current/sys/arch/hpcarm/hpcarm/hpc_machdep.c:589: for each function it appears in.)
*** Error code 1
Stop.
nbmake: stopped in /data/current/sys/arch/hpcarm/compile/IPAQ
ERROR: make all failed in /data/current/sys/arch/hpcarm/compile/IPAQ
*** BUILD ABORTED ***
[... snip ...]
I did not modify the kernel configuration file.
>How-To-Repeat:
Try to compile IPAQ kernel.
>Fix:
The following makes the kernel compile, I however am not able to test it
at the time being. I'm not sure whether PTE_CACHE is the right substitue
for PTE_PAGETABLE.
--- sys/arch/hpcarm/hpcarm/hpc_machdep.c Tue Apr 29 09:31:01 2003
+++ sys/arch/hpcarm/hpcarm/hpc_machdep.c.new Tue Apr 29 09:30:53 2003
@@ -586,7 +586,11 @@
#endif
/* Map page tables */
pmap_map_chunk(l1pagetable, KERNEL_BASE, KERNEL_BASE, pt_size,
+#ifdef ARM32_PMAP_NEW
VM_PROT_READ | VM_PROT_WRITE, PTE_PAGETABLE);
+#else
+ VM_PROT_READ | VM_PROT_WRITE, PTE_CACHE);
+#endif
/* Map the page table that maps the kernel pages */
pmap_map_entry(l1pagetable, kernel_ptpt.pv_va, kernel_ptpt.pv_pa,
>Release-Note:
>Audit-Trail:
From: IWAMOTO Toshihiro <toshii@netbsd.org>
To: gnats-bugs@gnats.netbsd.org
Cc:
Subject: pr/21397 CVS commit: src/sys/arch/hpcarm/hpcarm
Date: Fri, 2 May 2003 14:42:49 +0000 (UTC)
Module Name: src
Committed By: toshii
Date: Fri May 2 14:42:48 UTC 2003
Modified Files:
src/sys/arch/hpcarm/hpcarm: hpc_machdep.c
Log Message:
Make it compile without ARM32_PMAP_NEW defined.
Fixes PR kern/21397 by Jachym Holecek.
To generate a diff of this commit:
cvs rdiff -r1.61 -r1.62 src/sys/arch/hpcarm/hpcarm/hpc_machdep.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: toshii
State-Changed-When: Fri May 2 14:48:52 UTC 2003
State-Changed-Why:
Fix committed. Thanks for reporting.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.