Make it compile without ARM32_PMAP_NEW defined. Fixes PR kern/21397 by Jachym Holecek.